--- a/styles.css
+++ b/styles.css
@@ -237,3 +237,37 @@ body{
 a{
     color: white;
 }
+
+.skills1{
+    width: 200px;
+    margin: 60px auto;
+    color: white;
+}
+
+.skills li{
+    margin: 20px 0;
+}
+
+.bar{
+    background: #353b48;
+    display: block;
+    height: 2px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-radius: 3px;
+    overflow: hidden;
+    box-shadow: 0 0 10px #2187e7b3;
+}
+
+.bar span{
+    height: 2px;
+    float: left;
+    background: #2187e7;   
+}
+
+.html{
+    width: 90%;
+}
+
+.css{
+    width: 65%;
+}
